adjusted slider hover behavior to be a bit more modest; fixed overlap of footer elements by slider

--- a/components/landing/ESXSlider/SliderWrapper.css
+++ b/components/landing/ESXSlider/SliderWrapper.css
@@ -1,7 +1,7 @@
 .slider-wrapper {
   /* padding: 40px 0; */
-  padding: 169px 0;
-  margin: -169px 0;
+  padding: 40px 0;
+  margin: -40px 0;
   overflow: hidden;
   position: relative;
 }
